--- a/comp/scssfiles/main.scss
+++ b/comp/scssfiles/main.scss
@@ -36,7 +36,7 @@ body {
 .singlenews {
      position: relative;
      width: 100%;
-     height: 45vh;
+     min-height: 45vh;
      background-size: cover;
      background-position: center;
 }
