--- a/comp/scssfiles/main.scss
+++ b/comp/scssfiles/main.scss
@@ -1,12 +1,7 @@
 body {
   background-color: black;
-  font-family: 'Open Sans', sans-serif;
   line-height: 20px; /* NOT WORKING CHECK BACK*/
 }
-
-/*.fontOpenSans {
-  font-family: 'Open Sans', sans-serif;
-}*/
 
 .nytlogo{
   width: 100%;
@@ -48,5 +43,6 @@ body {
   width: 100%;
   line-height: 1.5rem;
   width: inherit;
+  padding: 0.5rem;
 
 }
