--- a/comp/scssfiles/styleresponsive.scss
+++ b/comp/scssfiles/styleresponsive.scss
@@ -30,13 +30,22 @@
     flex-wrap: wrap;
   }
 
+  .minified img{
+    height: 15vh;
+    width: 50%;
+  }
+
+  .minified{
+    height: 20vh;
+  }
+
 }
 
 
     @media only screen and (min-width:1000px ){
 
       .nytLogoDesktop{
-        width: 20%;
+        width: 15%;
       }
 
       .dropdownTablet {
@@ -53,6 +62,8 @@
 
       .logoAndDropdown{
         justify-content: flex-start;
+        height: 100vh;
+
       }
 
 
@@ -68,5 +79,14 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+    }
+
+    .minified img{
+      height: 15vh;
+      width: 50%;
+    }
+
+    .minified{
+      height: 20vh;
     }
   }
