--- a/comp/scssfiles/styleresponsive.scss
+++ b/comp/scssfiles/styleresponsive.scss
@@ -10,6 +10,11 @@
     padding-bottom: 0rem;
   }
 
+  .logoAndDropdown{
+
+    height: 60vh;
+  }
+
   .flexChooseTablet {
     display: flex;
     flex-direction: row;
@@ -69,8 +74,7 @@
 
       .logoAndDropdown{
         justify-content: flex-start;
-        height: 100vh;
-
+        height: 60vh;
       }
 
 
